# oanda-cli

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  release-please-config.json
.github/: dependabot.yml
.github/workflows/: ci.yml  conventional-commits.yml  release.yml
src/: api.rs  client.rs  config.rs  lib.rs  main.rs
src/commands/: account.rs  common.rs  inspect.rs  instrument.rs  labs.rs  mod.rs  order.rs  position.rs  pricing.rs  schema.rs  trade.rs  transaction.rs
tests/: api_endpoints.rs  cli.rs
