[package]
name = "oanda-cli"
version = "0.1.1"
edition = "2024"
description = "A thin CLI wrapper around the OANDA v20 REST API"
license = "MIT"
repository = "https://github.com/benletchford/oanda-cli"

[[bin]]
name = "oanda"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = [
    "json",
    "stream",
    "gzip",
    "deflate",
    "brotli",
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
