[package]
name = "oanda-cli"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
description = "A thin CLI wrapper around the OANDA v20 REST API"
authors = ["Ben Letchford"]
license = "MIT"
repository = "https://github.com/benletchford/oanda-cli"
homepage = "https://github.com/benletchford/oanda-cli"
readme = "README.md"
keywords = ["oanda", "forex", "trading", "cli", "api"]
categories = ["command-line-utilities", "api-bindings"]
exclude = [".github/"]

[[bin]]
name = "oanda"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "gzip",
    "deflate",
    "brotli",
    "rustls-tls",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
wiremock = "0.6"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = true
